# siqi_auth

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  docker-compose.master.yml  docker-compose.slave.yml  init.sql
conf/: agent.conf  server.conf
deploy/: Dockerfile.agent  Dockerfile.server  master_repl.sql
include/: admin_service_impl.h  auth.pb.h  auth_agent.h  auth_service_impl.h  local_cache.h  permission_dao.h
proto/: auth.proto
scripts/: deploy_db.sh  init.sql  start_server.sh
src/: admin_service_impl.cpp  admin_tool.cpp  auth.pb.cc  auth_agent.cpp  auth_agent_impl.cpp  auth_service_impl.cpp  client_example.cpp  permission_dao.cpp  server_main.cpp
test/: perf_test.cpp
